# quant-scholar

./: .env-example  .gitignore  README.md  SETUP.md  pdfparse.py  pyproject.toml  requirements.txt
.github/workflows/: quant_scholar.yml
autoscholar/: __init__.py
autoscholar/base/: __init__.py  parse_tool.py
autoscholar/crawler/: __init__.py  arxiv_crawler.py  base_crawler.py  config_sample.yaml  github_crawler.py
autoscholar/embeddings/: __init__.py  base.py  gemini_embedding.py  openai_embedding.py
autoscholar/knowledge/: __init__.py  graph_builder.py  knowledge_graph.py  paper.py
autoscholar/types/: __init__.py  embedding_types.py
autoscholar/utils/: logger.py  similarity.py
autoscholar/visualization/: graph_visualizer.py
docs/: quant-scholar.json
examples/kg_by_abstract/: README.md  demo.py
examples/kg_by_abstract/example-data/: 2502.15458.json  2502.15611.json  2502.15853.json  2502.16023.json  2502.17044.json  2502.17967.json  2502.18177.json  2502.19305.json  2502.20978.json  2503.00603.json  2503.02518.json  2503.02680.json  2503.03612.json  2503.08692.json  2503.08693.json  2503.08696.json  2503.08697.json  2503.13950.json  2503.15403.json  2503.16470.json
examples/kg_by_abstract/example-data/embeddings/: embeddings.json
scripts/: lint.sh  unittest.sh
tests/: test_pdf2markdown.py
tests/knowledge/: test_knowledge_graph.py  test_paper.py
